# slist

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  docs.yml  preview.yml  release.yml
api/slist/: index.html
contributing/: index.html
docs/: contributing.md  index.md
docs/api/: slist.md
search/: search_index.json
slist/: __init__.py  pydantic_compat.py
tests/: run_tqdm.py  test_docs.py  test_mypy.py  test_slist.py
